--- a/network-topology/package.json
+++ b/network-topology/package.json
@@ -15,7 +15,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-router": "^6.26.0",
     "react-router-dom": "^6.24.1",
+    "react-router-prompt": "^0.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
