--- a/network-topology/package.json
+++ b/network-topology/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "d3": "^7.9.0",
+    "env-cmd": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
@@ -22,8 +23,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f ./environments/.env.development react-scripts start",
+    "build:development": "env-cmd -f ./environments/.env.development react-scripts build",
+    "build:production": "env-cmd -f ./environments/.env.production react-scripts build",
+    "build:test": "env-cmd -f ./environments/.env.test react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
