--- a/network-topology/package.json
+++ b/network-topology/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "start": "env-cmd -f ./environments/.env.development react-scripts start",
+    "yarik": "env-cmd -f ./environments/.env.yarik react-scripts start",
     "build:development": "env-cmd -f ./environments/.env.development react-scripts build",
     "build:production": "env-cmd -f ./environments/.env.production react-scripts build",
     "build:test": "env-cmd -f ./environments/.env.test react-scripts build",
